--- a/inventory.ini
+++ b/inventory.ini
@@ -2,7 +2,7 @@
 db.sainathdevops.online
 
 [backend]
-backend.daws78s.online
+backend.sainathdevops.online
 
 [frontend]
-daws78s.online
+sainathdevops.online
