--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -4,56 +4,47 @@
 - name: enable nodejs:20
   ansible.builtin.command: dnf module enable nodejs:20 -y
 
-- name: to install nodejs
-  ansible.builtin.package:
-   name: nodejs
-   state: latest
+- name: install nodejs
+  ansible.builtin.dnf: # only works for Redhat family
+    name: "{{ item }}"
+    state: installed
+  loop:
+  - nodejs
+  - mysql
 
-- name: to install mysql
-  ansible.builtin.package:
-   name: mysql
-   state: latest
-
-- name: Add the user expense
+- name: create expense user
   ansible.builtin.user:
     name: expense
 
-- name: Creates directory
-  ansible.builtin.file:
-    path: /app
-    state: directory
-
-- name: download backend code
-  ansible.builtin.get_url:
-    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
-    dest: /tmp/backend.zip
-
-- name: unzip backend code
-  ansible.builtin.unarchive:
-    src: /tmp/backend.zip # by default checks in ansible server
-    dest: /app
-    remote_src: yes
+- name: run app pre-requisites
+  tags:
+  - deployment
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: app-pre-req
 
 - name: install npm dependencies
+  tags:
+  - deployment
   ansible.builtin.command: npm install
-    args:
+  args:
     chdir: /app
 
 - name: copy backend service
   ansible.builtin.template:
-    src: backend.service
+    src: backend.service.j2
     dest: /etc/systemd/system/backend.service
 
 - name: install python mysql dependencies
   ansible.builtin.pip: 
     name:
-      - PyMySQL # to connect MySQL DB from Ansible
-      - cryptography
+    - PyMySQL # to connect MySQL DB from Ansible
+    - cryptography
     executable: pip3.9 # pip3.11 if python version is 3.11
 
 - name: import data into mysql
   community.mysql.mysql_db:
-    login_user: root
+    login_user: "{{ login_user }}"
     login_password: "{{ login_password }}"
     login_host: "{{ login_host }}"
     target: /app/schema/backend.sql
@@ -65,7 +56,9 @@
     daemon_reload: true
 
 - name: start and enable backend service
+  tags: 
+  - deployment
   ansible.builtin.service:
     name: backend
-    state: started
+    state: restarted
     enabled: yes
